# intercom-python-sdk

./: .gitignore  .mk_docs.sh  LICENSE  README.md  intercom_setup.py  mk_docs.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: static.yml  tests.yml
docs/intercom_python_sdk/: index.html  intercom.html
docs/intercom_python_sdk/apis/: index.html  tags_to_api.html
docs/intercom_python_sdk/canvas/: builder.html  components.html  index.html  response_parser.html
docs/intercom_python_sdk/core/: api_base.html  configuration.html  errors.html  index.html  model_base.html  schema_base.html  utils.html
docs/intercom_python_sdk/models/: index.html
docs/intercom_python_sdk/schemas/: index.html
intercom-python-sdk/admins/: schemas.py
intercom-python-sdk/apis/: models.py
intercom-python-sdk/apis/admins/: api.py  models.py  schemas.py
intercom-python-sdk/core/: api_base.py  configuration.py
intercom_python_sdk/: __init__.py  intercom.py  models.py
intercom_python_sdk/apis/: __init__.py  models.py  tags_to_api.py
intercom_python_sdk/apis/admins/: __init__.py  api.py  models.py  schemas.py
intercom_python_sdk/canvas/: __init__.py  builder.py  components.py  response_parser.py
intercom_python_sdk/core/: __init__.py  api_base.py  configuration.py  errors.py  model_base.py  schema_base.py  utils.py
intercom_python_sdk/models/: __init__.py
intercom_python_sdk/schemas/: __init__.py
tests/: __init__.py  faked_schema_factory.py  test_admins.py  test_articles.py  test_basic.py  test_data_attributes.py  test_data_events.py
(+58 files in other folders)
