[project]
name = "intercom-python-sdk"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "faker>=37.3.0",
    "marshmallow>=3.0.0,<4.0.0",
    "requests>=2.32.3",
    "uplink>=0.9.7",
    "validator-collection>=1.5.0",
]
